--- a/style.css
+++ b/style.css
@@ -1,36 +1,74 @@
 html, body {
     box-sizing: border-box;
+    font-family: Oxygen, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    width: 100vw;
+}
+
+#title {
+  text-align: center;
+}
+
+h1 {
+  font-size: min(max(16px, 4vw), 35px);
+  line-height: 3vh;
+}
+
+h2 {
+  font-size: min(max(16px, 4vw), 22px);
+  line-height: 1vh;
 }
 
 #app {
-    display: flex;
-    flex-flow: wrap;
+  width: 50%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  row-gap: 2vh;
+  column-gap: 3vw;
+  /* display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center; */
+  top: 3vh;
+}
+
+#buckets {
+  position: relative;
+  text-align: center;
+  top: 4vh;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
     height: auto;
     width: 10vw;
-    border: 5px solid black;
+    border: 2px solid black;
     border-radius: 10px;
     padding: 5px;
-    margin: 8px;
+    visibility: hidden;
 }
 
-.matched {
-    height: auto;
-    width: 10vw;
-    border: 5px solid black;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 8px;
-    visibility: hidden;
+.visible {
+    visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 .fire {
     position: absolute;
     width: 10vw;
     height: auto;
-    /* margin: 0 0 2vh 2.5vw; */
 }
 
 .fire img {
