--- a/style.css
+++ b/style.css
@@ -43,21 +43,32 @@ h2 {
 }
 
 .water-notification {
-  animation: fade-in-bck 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) 0.3s both;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15vw;
+  width: 15vw;
+  border-radius: 50%;
+  animation: scale-in-center 0.3s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
   position: absolute;
   margin: auto;
-  text-align: center;
-  font-size: 3vh;
   z-index: 10;
+  box-shadow: 5px 5px 10px #818181;
+}
+
+.water-notification p {
+  margin: -1.5vw 0 0 0;
+  text-align: center;
+  color: white;
+  font-size: 4vw;
 }
 
 .water-red {
-  color: red;
-  font-weight: bold;
+  background-color: #b91111;
 }
 
 .water-blue {
-  color: rgb(32, 78, 204);
+  background-color: rgb(32, 78, 204);
 }
 
 .faded {
@@ -65,7 +76,7 @@ h2 {
 }
 
 .fade-in {
-  animation: focus-in-expand-fwd 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.8s both;
+  animation: focus-in-expand-fwd 0.8s ease 0.8s both;
 }
 
 .flex {
@@ -81,7 +92,7 @@ h2 {
     border: 2px solid black;
     border-radius: 10px;
     padding: 5px;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all 0.3s ease;
 }
 
@@ -89,8 +100,12 @@ h2 {
   transform: scale(1.1);
 }
 
+.swirl-out-bck {
+	animation: swirl-out-bck 0.6s ease-in both;
+}
+
 .visible {
-    visibility: visible;
+  visibility: visible;
 }
 
 .invisible {
@@ -129,13 +144,13 @@ h2 {
     }
   }
   
-  @keyframes fade-in-bck {
+  @keyframes scale-in-center {
     0% {
-      transform: translateZ(80px);
+      transform: scale(0);
       opacity: 0;
     }
     100% {
-      transform: translateZ(0);
+      transform: scale(1);
       opacity: 1;
     }
   }
@@ -153,3 +168,15 @@ h2 {
       opacity: 1;
     }
   }
+
+  @keyframes swirl-out-bck {
+    0% {
+      transform: rotate(0) scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(-540deg) scale(0);
+      opacity: 0;
+    }
+  }
+  
