--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
 }
 
 #mainContainer {
+  padding: 0;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -38,7 +39,7 @@ html, body {
 }
 
 #end {
-  font-size: min(max(30px, 5vw), 50px);
+  font-size: min(max(25px, 5vw), 50px);
   color: white;
 }
 
@@ -48,7 +49,7 @@ html, body {
 
 h1 {
   font-size: min(max(22px, 4vw), 35px);
-  /* margin: 10px; */
+  margin: 0px;
 }
 
 h2 {
@@ -64,7 +65,7 @@ h2 {
 #app {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 8px;
+  gap: 5px;
 }
 
 #buckets {
